# root-cause-analysis

./: .gitignore  CHANGELOG.md  EXPERIMENTS.md  ORDER.md  README.md  SETUP.md  build_trainticket_topology.py  case_study_incident.json  case_study_incident_case2.json  case_study_logs.jsonl  case_study_result_case1.json  case_study_result_case2.json  case_study_topology.json  convert_case_study.py  convert_rcaeval.py  demo_incident.json  diagnose_failures.py  diagnosis_v6v7.csv  experiment_core.py  main.py  onlineboutique_topology.json  pyproject.toml  requirements.txt  run_all_experiments.py  run_case_study.py  run_demo.py  run_experiment.py  run_monolithic.py  run_no_verifier.py  run_parallel.py  run_rcaeval.py  run_rcaeval.py.bak  show_results.py  test_end_to_end.py  test_phase1.py  test_tcb_rca.py  trainticket_topology.json
common/: a2a_contract.py  evidence.py  evidence_factory.py  llm_client.py  response_builder.py
experiments/: b1_s1.json  b1_s2.json  b1_s3.json  b1_s4.json  b1_s5.json  b1_s6.json  b1_s7.json  b1_s8.json  b2_s1.json  b2_s2.json  b2_s3.json  b2_s4.json  b2_s5.json  b2_s6.json  b2_s7.json  b2_s8.json  b3_s1.json  b3_s2.json  b3_s3.json  b3_s4.json  b3_s5.json  b3_s6.json  b3_s7.json  b3_s8.json  ours_case1.json  ours_case2.json  ours_s1.json  ours_s2.json  ours_s3.json  ours_s4.json  ours_s5.json  ours_s6.json  ours_s7.json  ours_s8.json
paper_artifacts_20260420/: diagnosis_v5.csv
scenarios/: s2_queue_backlog.jsonl  s3_slow_query.jsonl  s4_disk_full.jsonl  s5_false_positive.jsonl  s6_noisy_db.jsonl  s7_concurrent_faults.jsonl  (+1 more)
(+699 files in other folders)
